--- a/src/App.css
+++ b/src/App.css
@@ -9,16 +9,16 @@ body{
   background-color: black;
 }
 .image{
-  border-radius: 50%;
+  border-radius: 80%;
   margin-top: 80px;
-  width: 400px;
-  height: 400px;
+  width: 410px;
+  height: 410px;
   margin-left: 1000px;
 }
 .options{
   user-select: none;
   margin-left: 10vw;
-  height: 100px;
+  height: 60px;
   width: 80vw;
   display: flex;
   flex-direction: row;
@@ -38,7 +38,7 @@ body{
   text-align: left;
   text-align: justify;
   position: relative;
-  top: -450px;
+  top: -430px;
   left: 100px;
 }
 .information{
@@ -71,4 +71,9 @@ body{
   position: relative;
   top: -250px;
   left: 100px;
+}
+.table{
+  border-collapse: separate;
+  border-spacing: 80px 30px;
+  background: rgb(0, 0, 0);
 }
